make user capable to change his password #17
